third_party/rust/pin-project/tests/ui/cfg/proper_unpin.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/cfg/proper_unpin.rs:27:5
   |
27 |     is_unpin::<Bar<PhantomPinned>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `__Bar<'_, PhantomPinned>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using `Box::pin`
note: required because it appears within the type `__Bar<'_, PhantomPinned>`
  --> tests/ui/cfg/proper_unpin.rs:14:8
   |
14 | struct Bar<T> {
   |        ^^^
note: required because of the requirements on the impl of `Unpin` for `Bar<PhantomPinned>`
  --> tests/ui/cfg/proper_unpin.rs:13:1
   |
13 | #[pin_project]
   | ^^^^^^^^^^^^^^
14 | struct Bar<T> {
   |        ^^^^^^
note: required by a bound in `is_unpin`
  --> tests/ui/cfg/proper_unpin.rs:22:16
   |
22 | fn is_unpin<T: Unpin>() {}
   |                ^^^^^ required by this bound in `is_unpin`
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
